fix: fix rich content not wrapping in event

--- a/app/styles/components/node-editor.styl
+++ b/app/styles/components/node-editor.styl
@@ -35,6 +35,8 @@
 .event
 	display inline-block
 	vertical-align middle
+	white-space initial
+	max-width 28em
 	&-container
 		& + &
 			margin-left var(--event-node-subsequent-margin)
